--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@
 .main-controls h3 {
 	margin-top: 1.2rem;
 	text-align: center;
-	font-size: 18px;
+	font-size: 13px;
 }
 
 .main-controls .salt-marsh-control .slider-container {
